# iptv-icons

./: .gitignore  Cargo.toml  README.md  deploy.sh
.github/workflows/: release.yml
src/: cjy.rs  iptv.rs  main.rs
