[package]
name = "icon-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7.5", features = ["multipart"] }
moka = { version = "0.12", features = ["future"] }
dashmap = "6.0.1"
bytes = "1.7.1"
tower-http = { version = "0.5.2", features = ["compression-full", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
oxipng = "9.1"
reqwest = { version = "0.11", features = ["json", "blocking",] }
flate2 = "1.0"
quick-xml = "0.31"
tokio-stream = "0.1"
md5 = "0.7"
urlencoding = "2.1"
base64 = "0.21"